clusters/apps/env/production/database/minio/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${APP}
  annotations:
    kubernetes.io/ingress.class: "traefik-internal"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}`)"
      services:
        - name: ${APP}
          port: 9001
    - kind: Rule
      match: "Host(`${INGRESSROUTE_S3}.${FAMILY_DOMAIN}`)"
      services:
        - name: ${APP}
          port: 9000
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: ${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}
